make sure cancel buttons don't overlap

--- a/app/assets/stylesheets/bugs.css
+++ b/app/assets/stylesheets/bugs.css
@@ -48,7 +48,13 @@ div.progress{
 
 .cancel-button{
     margin-top:6px;
-    margin-left: -15px;
+    margin-left:105px;
+    font-size:18px;
+}
+
+.cancel-button-sm{
+    margin-top:6px;
+    margin-left:80px;
     font-size:18px;
 }
 
